// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeAlarm renders blank if no alarm severity specified 1`] = `<div />`;

exports[`AttributeAlarm renders dirty & error correctly 1`] = `
<EditError
  nativeColor="#f44336"
/>
`;

exports[`AttributeAlarm renders dirty correctly 1`] = `
<pure(Edit)
  nativeColor="#7986cb"
/>
`;

exports[`AttributeAlarm renders invalid_alarm correctly 1`] = `
<pure(HighlightOff)
  nativeColor="#303f9f"
/>
`;

exports[`AttributeAlarm renders major_alarm correctly 1`] = `
<pure(Error)
  nativeColor="#f44336"
/>
`;

exports[`AttributeAlarm renders minor_alarm correctly 1`] = `
<pure(Warning)
  nativeColor="#fff"
/>
`;

exports[`AttributeAlarm renders no_alarm correctly 1`] = `
<pure(InfoOutline)
  nativeColor="#7986cb"
/>
`;

exports[`AttributeAlarm renders pending correctly 1`] = `
<WithStyles(CircularProgress)
  size={24}
  style={
    Object {
      "color": "#ff4081",
    }
  }
/>
`;

exports[`AttributeAlarm renders undefined_alarm correctly 1`] = `
<pure(HighlightOff)
  nativeColor="#303f9f"
/>
`;
